--- a/ansible/templates/dns/reverse.db.j2
+++ b/ansible/templates/dns/reverse.db.j2
@@ -14,5 +14,5 @@ $TTL 86400
 {{ server_ip_reversed }}        IN  PTR     ns1.{{ domain }}.
 
 ;PTR Record IP address to HostName
-101      IN  PTR     www.itzgeek.local.
-150      IN  PTR     mail.itzgeek.local.
+101      IN  PTR     www.{{ domain }}.
+150      IN  PTR     mail.{{ domain }}.
