--- a/ansible/roles/nagios/templates/hosts.cfg.j2
+++ b/ansible/roles/nagios/templates/hosts.cfg.j2
@@ -174,6 +174,8 @@ define service {
     check_period            24x7
     contact_groups          admins
 }
+
+############# DHCP ##############################
 define service {
     use                     generic-service
     host_name               dhcp-server
