Fix full deploy script and fix nagios notification admin

--- a/ansible/templates/postfix/main.cf.j2
+++ b/ansible/templates/postfix/main.cf.j2
@@ -10,4 +10,4 @@ smtp_tls_CAfile = /etc/postfix/smtp_tls_cert.pem
 
 #smtp_tls_wrappermode = yes
 inet_protocols = ipv4
-myorigin = hichemlamine.devops.com
+myorigin = devops6080@gmail.com
