Add html web interface page for all web interfaces in the project

--- a/ansible/templates/postfix/main.cf.j2
+++ b/ansible/templates/postfix/main.cf.j2
@@ -11,4 +11,5 @@ smtp_tls_CAfile = /etc/postfix/smtp_tls_cert.pem
 
 #smtp_tls_wrappermode = yes
 inet_protocols = ipv4
-myorigin = devops6080.com
+# myorigin = devops6080.com
+myorigin = inpackt.tn
